获取微信步数

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/catalog/catalog",
+    "pages/stepNumber/stepNumber",
     "pages/treePage/treePage"
   ],
   "window": {
